--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="col-sm-6 mx-auto">
                 <h1 class="mt-5">Hello,</h1>
                     <br>
-                <h1 class="my-5">I am <span class="text-info">Shalini Singh</span></h1>
+                <h1 class="my-5">I am <span class="text-info">Vishal Singh</span></h1>
             </div>
             <div class="col-sm-4 mx-auto " >
                 <img src="img/pic.jpeg" alt="shalini" class="img-fluid rounded-pill w-100 ">
